style.css
body {
    border: grey solid 2px;
    margin: 20px auto;
    min-width: 400px;
    max-width: 1200px;
    color:#5c3e0663;
    text-shadow: 1px 1px  #3d2801;
    background: rgb(230,240,163); /* Old browsers */
    background: -moz-linear-gradient(top,  rgba(230,240,163,1) 0%, rgba(244,205,61,1) 31%, rgba(244,205,61,1) 31%, rgba(234,215,42,1) 57%, rgba(219,240,67,1) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top,  rgba(230,240,163,1) 0%,rgba(244,205,61,1) 31%,rgba(244,205,61,1) 31%,rgba(234,215,42,1) 57%,rgba(219,240,67,1) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom,  rgba(230,240,163,1) 0%,rgba(244,205,61,1) 31%,rgba(244,205,61,1) 31%,rgba(234,215,42,1) 57%,rgba(219,240,67,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6f0a3', endColorstr='#dbf043',GradientType=0 ); /* IE6-9 */
    font-size: 23px;
}

* {
  scroll-behavior: smooth;
}

header a {
  font-weight: 500;
  color: rgb(70, 75, 46);
  text-shadow: 1px 1px 2px rgb(179, 179, 36);
  text-decoration: none;
}

header {
    width: 100%;
    border-bottom: 1px dotted  gray;
}

ul {
  padding: 0 20px;
}

.navig {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  align-content: center;
  font-size: 75%;
 
}

nav li {
  padding: 3px;
  border: 1px solid rgb(201, 245, 7);
  background-color: rgba(234, 215, 42, 0.253);
  border-radius: 6px;
  text-transform: uppercase;
  list-style: none;
}

.navig li:hover {
  border: 2px solid rgb(173, 152, 29);
  transition: border 0.3s;
}

.info {
  display: flex;
  flex-direction: column;
}

figcaption {
  padding-left: 30px;
  font-style: italic;
  font-size: 25px;
}

h1 {
    display: block;
    color: darkred;
    text-shadow: 1px 1px 2px red;
    margin: 10px auto;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 140%;
    font-style: italic;
}

.photo {
    display: block;
    margin: 10px auto 25px;
    border: 2px solid rgb(158, 235, 15);
    width: 20%;
    border-radius: 5px;
    
}
    .myphoto {
    width: 100%; 
    height: 100%;
    object-fit: cover; 
}
.cv-text {
    display: block;
    margin: 25px 45%;
    color: darkred;
    text-shadow: 1px 1px 2px red;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 140%;
    font-style: italic;
}

.continf {
    font-weight: 400;
}
.useskl {
    font-style:oblique;
    margin: 20px;
}
footer {
  display: flex;
  flex-direction: column;
  border-top: 1px dotted gray;
}
.logoinf {
    margin: 20px 0 0 50px;
    width: 300px;
    height: 150px;
}
.logo {
    width: 100%; 
    height: 100%;
    object-fit: contain; 
}

.name {
    font-size: 25px;
    margin-top: 10px;
    padding: 10px;
}

section {
    margin: 10px 0px 20px 20px;
    font-weight: bold;
    font-size: 25px;
}
.about {
    font-weight: normal;
}
.skl {
    font-size: 25px;
    font-weight: normal;
    margin: 15px;
    
}
.skl_two {
    font-size: 25px;
    font-weight: normal;
    margin-left: 15px;
    font-style: italic;
}
.codeinf {
    font-size: 25px;
    font-weight: normal;
    margin-left: 15px;
    font-style: italic;
}
code {
    font-weight: normal;
    text-shadow: none;
}

.code-example {
  margin: 0px 150px 0px 0px;
}
.exp {
    font-size: 25px;
    font-weight: normal;
    margin: 15px;
}

.container {
  margin-top: -10px;
  margin-bottom: 20xp;
  padding-bottom: 10px ;
}

.examples {
display: flex;
justify-content: space-around;
margin-bottom: 20px;
}
.links-images {
  display: block;
  width: 20%;
  font-size: 20px;
  text-decoration: none;
  text-shadow: none;
  text-align: center;
  color:#4e3404;
}

.foot {
    display: flex;
    justify-content: space-around;
}
.gitlink {
  margin-top: 35px;
  font-family:Georgia, 'Times New Roman', Times, serif;
  font-size: 40px;
}
footer a {
  font-weight: 500;
  color: rgb(10, 10, 10);
  text-shadow: 1px 1px 2px rgb(179, 179, 36);
  text-decoration: none;
}
.edu {
    font-size: 25px;
    font-weight: normal;
    margin: 15px;
}
.lng {
    font-size: 25px;
    font-weight: normal;
    margin: 15px;
}

.year {
    margin: 10px auto;
    color: rgb(10, 10, 10);
    text-shadow: none;
}

